[gd_scene load_steps=6 format=3 uid="uid://d3wlssfyq34aa"]

[ext_resource type="Script" path="res://scripts/SpawnUpgrade.gd" id="1_ats6j"]

[sub_resource type="LabelSettings" id="LabelSettings_tq613"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ik5j"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0, 0.703903, 0.544218, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_4qw7i"]
font_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wppft"]
bg_color = Color(0.864075, 0.176264, 0.26471, 1)
corner_radius_top_left = 180
corner_radius_top_right = 180
corner_radius_bottom_right = 180
corner_radius_bottom_left = 180

[node name="Phase" type="PanelContainer"]
offset_right = 184.0
offset_bottom = 136.0
scale = Vector2(1.01621, 1.26278)
script = ExtResource("1_ats6j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15
metadata/_edit_use_anchors_ = true

[node name="Description" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Lets you phase through 
walls when dashing.
"
label_settings = SubResource("LabelSettings_tq613")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_5ik5j")
text = "Phase"
label_settings = SubResource("LabelSettings_4qw7i")

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[node name="Buy" type="Button" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_wppft")
text = "Buy"

[node name="QuizPanel" type="Panel" parent="."]
layout_mode = 2

[node name="QuestionLabel" type="Label" parent="QuizPanel"]
layout_mode = 0
offset_left = 552.051
offset_top = 118.786
offset_right = 592.051
offset_bottom = 141.786

[node name="Answer1" type="Button" parent="QuizPanel"]
layout_mode = 0
offset_left = 376.0
offset_top = 220.0
offset_right = 567.0
offset_bottom = 330.0

[node name="Answer2" type="Button" parent="QuizPanel"]
layout_mode = 0
offset_left = 594.365
offset_top = 219.357
offset_right = 808.365
offset_bottom = 332.357

[node name="WrongAnswerLabel" type="Label" parent="QuizPanel"]
layout_mode = 0
offset_left = 524.0
offset_top = 159.0
offset_right = 564.0
offset_bottom = 182.0
text = "Wrong asnwer"

[node name="CorrectAnswerLabel" type="Label" parent="QuizPanel"]
layout_mode = 0
offset_left = 524.0
offset_top = 159.0
offset_right = 564.0
offset_bottom = 182.0
text = "Correct"

[connection signal="pressed" from="VBoxContainer/VBoxContainer2/Buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/Buy" to="VBoxContainer/VBoxContainer2/Buy" method="_on_pressed"]
[connection signal="pressed" from="QuizPanel/Answer1" to="." method="_on_answer_1_pressed"]
[connection signal="pressed" from="QuizPanel/Answer2" to="." method="_on_answer_2_pressed"]
